Fix spacing in nav

--- a/assets/css/components/nav.css
+++ b/assets/css/components/nav.css
@@ -63,7 +63,7 @@
 
 @media (min-width: 48em) {
   .nav li a {
-    padding: 20px 30px;
+    padding: 20px 20px;
     padding-left: 10px;
   }
   .nav .menu {
